add new notebook

--- a/study/deep-learning-from-scratch-5/step05/note.ipynb
+++ b/study/deep-learning-from-scratch-5/step05/note.ipynb
@@ -49,7 +49,9 @@
   {
    "cell_type": "markdown",
    "id": "30e1010c-e9d3-497b-8aa6-ab0f5d744e6d",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "一つ目の変更点は、期待値の表記方法についてである。連続の確率変数$x$と、確率密度が$p(x)$で表されるとき、$f(x)$の期待値は次の式で表される。\n",
     "\n",
