--- a/study/deep-learning-from-scratch-5/step09/re.ipynb
+++ b/study/deep-learning-from-scratch-5/step09/re.ipynb
@@ -49,8 +49,446 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 143,
+   "id": "ea391a35-e71b-477e-91b8-f44035c62ed8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "UNet(\n",
+      "  (down1): ConvBlock(\n",
+      "    (convs): Sequential(\n",
+      "      (0): Conv2d(1, 64, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+      "      (1): BatchNorm2d(64, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+      "      (2): ReLU()\n",
+      "      (3): Conv2d(64, 64, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+      "      (4): BatchNorm2d(64, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+      "      (5): ReLU()\n",
+      "    )\n",
+      "    (mlp): Sequential(\n",
+      "      (0): Linear(in_features=100, out_features=64, bias=True)\n",
+      "      (1): ReLU()\n",
+      "      (2): Linear(in_features=64, out_features=64, bias=True)\n",
+      "    )\n",
+      "  )\n",
+      "  (down2): ConvBlock(\n",
+      "    (convs): Sequential(\n",
+      "      (0): Conv2d(64, 128, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+      "      (1): BatchNorm2d(128, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+      "      (2): ReLU()\n",
+      "      (3): Conv2d(128, 128, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+      "      (4): BatchNorm2d(128, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+      "      (5): ReLU()\n",
+      "    )\n",
+      "    (mlp): Sequential(\n",
+      "      (0): Linear(in_features=100, out_features=128, bias=True)\n",
+      "      (1): ReLU()\n",
+      "      (2): Linear(in_features=128, out_features=128, bias=True)\n",
+      "    )\n",
+      "  )\n",
+      "  (down3): ConvBlock(\n",
+      "    (convs): Sequential(\n",
+      "      (0): Conv2d(128, 256, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+      "      (1): BatchNorm2d(256, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+      "      (2): ReLU()\n",
+      "      (3): Conv2d(256, 256, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+      "      (4): BatchNorm2d(256, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+      "      (5): ReLU()\n",
+      "    )\n",
+      "    (mlp): Sequential(\n",
+      "      (0): Linear(in_features=100, out_features=256, bias=True)\n",
+      "      (1): ReLU()\n",
+      "      (2): Linear(in_features=256, out_features=256, bias=True)\n",
+      "    )\n",
+      "  )\n",
+      "  (bot1): ConvBlock(\n",
+      "    (convs): Sequential(\n",
+      "      (0): Conv2d(256, 512, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+      "      (1): BatchNorm2d(512, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+      "      (2): ReLU()\n",
+      "      (3): Conv2d(512, 512, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+      "      (4): BatchNorm2d(512, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+      "      (5): ReLU()\n",
+      "    )\n",
+      "    (mlp): Sequential(\n",
+      "      (0): Linear(in_features=100, out_features=512, bias=True)\n",
+      "      (1): ReLU()\n",
+      "      (2): Linear(in_features=512, out_features=512, bias=True)\n",
+      "    )\n",
+      "  )\n",
+      "  (up3): ConvBlock(\n",
+      "    (convs): Sequential(\n",
+      "      (0): Conv2d(768, 256, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+      "      (1): BatchNorm2d(256, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+      "      (2): ReLU()\n",
+      "      (3): Conv2d(256, 256, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+      "      (4): BatchNorm2d(256, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+      "      (5): ReLU()\n",
+      "    )\n",
+      "    (mlp): Sequential(\n",
+      "      (0): Linear(in_features=100, out_features=256, bias=True)\n",
+      "      (1): ReLU()\n",
+      "      (2): Linear(in_features=256, out_features=256, bias=True)\n",
+      "    )\n",
+      "  )\n",
+      "  (up2): ConvBlock(\n",
+      "    (convs): Sequential(\n",
+      "      (0): Conv2d(384, 128, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+      "      (1): BatchNorm2d(128, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+      "      (2): ReLU()\n",
+      "      (3): Conv2d(128, 128, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+      "      (4): BatchNorm2d(128, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+      "      (5): ReLU()\n",
+      "    )\n",
+      "    (mlp): Sequential(\n",
+      "      (0): Linear(in_features=100, out_features=128, bias=True)\n",
+      "      (1): ReLU()\n",
+      "      (2): Linear(in_features=128, out_features=128, bias=True)\n",
+      "    )\n",
+      "  )\n",
+      "  (up1): ConvBlock(\n",
+      "    (convs): Sequential(\n",
+      "      (0): Conv2d(192, 64, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+      "      (1): BatchNorm2d(64, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+      "      (2): ReLU()\n",
+      "      (3): Conv2d(64, 64, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+      "      (4): BatchNorm2d(64, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+      "      (5): ReLU()\n",
+      "    )\n",
+      "    (mlp): Sequential(\n",
+      "      (0): Linear(in_features=100, out_features=64, bias=True)\n",
+      "      (1): ReLU()\n",
+      "      (2): Linear(in_features=64, out_features=64, bias=True)\n",
+      "    )\n",
+      "  )\n",
+      "  (out): Conv2d(64, 1, kernel_size=(1, 1), stride=(1, 1))\n",
+      "  (maxpool): MaxPool2d(kernel_size=2, stride=2, padding=0, dilation=1, ceil_mode=False)\n",
+      ")\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(model)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
    "id": "a0911e66-2ca3-4a41-b335-a4723f674bd8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch\n",
+    "from torch import nn\n",
+    "import math\n",
+    "\n",
+    "class ConvBlock(nn.Module):\n",
+    "    def __init__(self, in_ch, out_ch, time_embed_dim):\n",
+    "        super().__init__()\n",
+    "        self.convs = nn.Sequential(\n",
+    "            nn.Conv2d(in_ch, out_ch, 3, padding=1),\n",
+    "            nn.BatchNorm2d(out_ch),\n",
+    "            nn.ReLU(),\n",
+    "            nn.Conv2d(out_ch, out_ch, 3, padding=1),\n",
+    "            nn.BatchNorm2d(out_ch),\n",
+    "            nn.ReLU()\n",
+    "        )\n",
+    "        self.mlp = nn.Sequential(\n",
+    "            nn.Linear(time_embed_dim, in_ch),\n",
+    "            nn.ReLU(),\n",
+    "            nn.Linear(in_ch, in_ch)\n",
+    "        )\n",
+    "\n",
+    "    def forward(self, x, v):\n",
+    "        N, C, _, _ = x.shape\n",
+    "        v = self.mlp(v)\n",
+    "        v = v.view(N, C, 1, 1)\n",
+    "        y = self.convs(x + v)\n",
+    "        return y\n",
+    "\n",
+    "in_ch = 1\n",
+    "time_embed_dim=100\n",
+    "timesteps = torch.tensor([1])\n",
+    "\n",
+    "down1 = ConvBlock(in_ch, 64, time_embed_dim)\n",
+    "down2 = ConvBlock(64,   128, time_embed_dim)\n",
+    "down3 = ConvBlock(128,  256, time_embed_dim)\n",
+    "\n",
+    "bot1 = ConvBlock(256, 512, time_embed_dim)\n",
+    "\n",
+    "up3 = ConvBlock(128 + 512, 256, time_embed_dim)\n",
+    "up2 = ConvBlock(128 + 256, 128, time_embed_dim)\n",
+    "up1 = ConvBlock(128 + 64 , 64 , time_embed_dim)\n",
+    "out = nn.Conv2d(64, in_ch, 1)\n",
+    "\n",
+    "maxpool = nn.MaxPool2d(2)\n",
+    "upsample = nn.Upsample(scale_factor=2, mode='bilinear')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "id": "6c42175e-dc9b-42c8-b174-2a6d995be8dc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([1, 128, 7, 7])\n",
+      "torch.Size([1, 256, 3, 3])\n"
+     ]
+    },
+    {
+     "ename": "RuntimeError",
+     "evalue": "Sizes of tensors must match except in dimension 1. Expected size 6 but got size 7 for tensor number 1 in the list.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [66]\u001b[0m, in \u001b[0;36m<cell line: 36>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     33\u001b[0m \u001b[38;5;28mprint\u001b[39m(x\u001b[38;5;241m.\u001b[39mshape)\n\u001b[1;32m     35\u001b[0m x \u001b[38;5;241m=\u001b[39m upsample(x)\n\u001b[0;32m---> 36\u001b[0m x \u001b[38;5;241m=\u001b[39m \u001b[43mtorch\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcat\u001b[49m\u001b[43m(\u001b[49m\u001b[43m[\u001b[49m\u001b[43mx\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mx3\u001b[49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdim\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[1;32m     37\u001b[0m x \u001b[38;5;241m=\u001b[39m up3(x, v)\n\u001b[1;32m     39\u001b[0m x \u001b[38;5;241m=\u001b[39m upsample(x)\n",
+      "\u001b[0;31mRuntimeError\u001b[0m: Sizes of tensors must match except in dimension 1. Expected size 6 but got size 7 for tensor number 1 in the list."
+     ]
+    }
+   ],
+   "source": [
+    "def _pos_encoding(time_idx, output_dim, device='cpu'):\n",
+    "    t, D = time_idx, output_dim\n",
+    "    v = torch.zeros(D, device=device)\n",
+    "\n",
+    "    i = torch.arange(0, D, device=device)\n",
+    "    div_term = torch.exp(i / D * math.log(10000))\n",
+    "\n",
+    "    v[0::2] = torch.sin(t / div_term[0::2])\n",
+    "    v[1::2] = torch.cos(t / div_term[1::2])\n",
+    "    return v\n",
+    "\n",
+    "def pos_encoding(timesteps, output_dim, device='cpu'):\n",
+    "    batch_size = len(timesteps)\n",
+    "    device = timesteps.device\n",
+    "    v = torch.zeros(batch_size, output_dim, device=device)\n",
+    "    for i in range(batch_size):\n",
+    "        v[i] = _pos_encoding(timesteps[i], output_dim, device)\n",
+    "    return v\n",
+    "\n",
+    "x = torch.randn(1, 1, 28, 28)\n",
+    "\n",
+    "v = pos_encoding(timesteps, time_embed_dim, x.device)\n",
+    "\n",
+    "x1 = down1(x, v)\n",
+    "x = maxpool(x1)\n",
+    "\n",
+    "x2 = down2(x, v)\n",
+    "x = maxpool(x2)\n",
+    "print(x.shape)\n",
+    "x3 = down3(x, v)\n",
+    "x = maxpool(x3)\n",
+    "\n",
+    "print(x.shape)\n",
+    "\n",
+    "x = upsample(x)\n",
+    "x = torch.cat([x, x3], dim=1)\n",
+    "x = up3(x, v)\n",
+    "\n",
+    "x = upsample(x)\n",
+    "x = torch.cat([x, x2], dim=1)\n",
+    "x = up2(x, v)\n",
+    "\n",
+    "x = upsample(x)\n",
+    "x = torch.cat([x, x1], dim=1)\n",
+    "x = up1(x, v)\n",
+    "\n",
+    "x = out(x)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "52ce4595-2c77-45f1-9b9b-9d4d5c49cf66",
+   "metadata": {},
+   "source": [
+    "単純に、層を増や「そう」としたが、maxpoolingで形状が半分になるため難しい（奇数の場合は切り捨てされる模様）\n",
+    "\n",
+    "strideを変更すればできなくはない？"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "229fc408-3a05-440e-a422-850c70498048",
+   "metadata": {},
+   "source": [
+    "upsampleをdecomvolutionに変更させる"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 140,
+   "id": "79f06dd4-c457-4d70-9130-de13489e111c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def _pos_encoding(time_idx, output_dim, device='cpu'):\n",
+    "    t, D = time_idx, output_dim\n",
+    "    v = torch.zeros(D, device=device)\n",
+    "\n",
+    "    i = torch.arange(0, D, device=device)\n",
+    "    div_term = torch.exp(i / D * math.log(10000))\n",
+    "\n",
+    "    v[0::2] = torch.sin(t / div_term[0::2])\n",
+    "    v[1::2] = torch.cos(t / div_term[1::2])\n",
+    "    return v\n",
+    "\n",
+    "def pos_encoding(timesteps, output_dim, device='cpu'):\n",
+    "    batch_size = len(timesteps)\n",
+    "    device = timesteps.device\n",
+    "    v = torch.zeros(batch_size, output_dim, device=device)\n",
+    "    for i in range(batch_size):\n",
+    "        v[i] = _pos_encoding(timesteps[i], output_dim, device)\n",
+    "    return v\n",
+    "\n",
+    "class ConvBlock(nn.Module):\n",
+    "    def __init__(self, in_ch, out_ch, time_embed_dim):\n",
+    "        super().__init__()\n",
+    "        self.convs = nn.Sequential(\n",
+    "            nn.Conv2d(in_ch, out_ch, 3, padding=1),\n",
+    "            nn.BatchNorm2d(out_ch),\n",
+    "            nn.ReLU(),\n",
+    "            nn.Conv2d(out_ch, out_ch, 3, padding=1),\n",
+    "            nn.BatchNorm2d(out_ch),\n",
+    "            nn.ReLU()\n",
+    "        )\n",
+    "        self.mlp = nn.Sequential(\n",
+    "            nn.Linear(time_embed_dim, in_ch),\n",
+    "            nn.ReLU(),\n",
+    "            nn.Linear(in_ch, in_ch)\n",
+    "        )\n",
+    "\n",
+    "    def forward(self, x, v):\n",
+    "        N, C, _, _ = x.shape\n",
+    "        v = self.mlp(v)\n",
+    "        v = v.view(N, C, 1, 1)\n",
+    "        y = self.convs(x + v)\n",
+    "        return y\n",
+    "\n",
+    "class DeConvBlock(nn.Module):\n",
+    "    def __init__(self, in_ch, out_ch, time_embed_dim):\n",
+    "        super().__init__()\n",
+    "        self.deconvs = nn.Sequential(\n",
+    "            nn.ConvTranspose2d(in_ch, out_ch, 6, padding=1),\n",
+    "            nn.BatchNorm2d(out_ch),\n",
+    "            nn.ReLU(),\n",
+    "            nn.ConvTranspose2d(out_ch, out_ch, 6, padding=1),\n",
+    "            nn.BatchNorm2d(out_ch),\n",
+    "            nn.ReLU()\n",
+    "        )\n",
+    "        self.mlp = nn.Sequential(\n",
+    "            nn.Linear(time_embed_dim, in_ch),\n",
+    "            nn.ReLU(),\n",
+    "            nn.Linear(in_ch, in_ch)\n",
+    "        )\n",
+    "    def forward(self, x, v):\n",
+    "        N, C, _, _, = x.shape\n",
+    "        # v = self.mlp(v)\n",
+    "        # v = v.view(N, C, 1, 1)\n",
+    "        y = self.deconvs(x)\n",
+    "        return y\n",
+    "    \n",
+    "class UNet(nn.Module):\n",
+    "    def __init__(self, in_ch=1, time_embed_dim=100):\n",
+    "        super().__init__()\n",
+    "        self.time_embed_dim = time_embed_dim\n",
+    "\n",
+    "        self.down1 = ConvBlock(in_ch, 64, time_embed_dim)\n",
+    "        self.down2 = ConvBlock(64, 128, time_embed_dim)\n",
+    "        self.bot1 = ConvBlock(128, 256, time_embed_dim)\n",
+    "        self.up2 = ConvBlock(128 + 256, 128, time_embed_dim)\n",
+    "        self.up1 = ConvBlock(128 + 64, 64, time_embed_dim)\n",
+    "        self.out = nn.Conv2d(64, in_ch, 1)\n",
+    "\n",
+    "        self.maxpool = nn.MaxPool2d(2)\n",
+    "        self.upsample = nn.Upsample(scale_factor=2, mode='bilinear')\n",
+    "\n",
+    "    def forward(self, x, timesteps):\n",
+    "        v = pos_encoding(timesteps, self.time_embed_dim, x.device)\n",
+    "\n",
+    "        x1 = self.down1(x, v)\n",
+    "        x = self.maxpool(x1)\n",
+    "        x2 = self.down2(x, v)\n",
+    "        x = self.maxpool(x2)\n",
+    "\n",
+    "        x = self.bot1(x, v)\n",
+    "\n",
+    "        x = self.upsample(x)\n",
+    "        x = torch.cat([x, x2], dim=1)\n",
+    "        x = self.up2(x, v)\n",
+    "        x = self.upsample(x)\n",
+    "        x = torch.cat([x, x1], dim=1)\n",
+    "        x = self.up1(x, v)\n",
+    "        x = self.out(x)\n",
+    "        return x\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 141,
+   "id": "f65978ef-895d-460d-9831-16f46b9b8e82",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = torch.randn(1, 1, 28, 28)\n",
+    "\n",
+    "deconv = DeConvBlock(1, 64, 10)\n",
+    "v = pos_encoding(timesteps, time_embed_dim, x.device)\n",
+    "y = deconv(x,v)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 142,
+   "id": "2f4698e6-0575-4c36-8d10-303fc9aef8a6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([1, 128, 7, 7])\n",
+      "torch.Size([1, 64, 13, 13])\n",
+      "torch.Size([1, 32, 19, 19])\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = torch.randn(1, 1, 28, 28)\n",
+    "\n",
+    "v = pos_encoding(timesteps, time_embed_dim, x.device)\n",
+    "\n",
+    "x1 = down1(x, v)\n",
+    "x = maxpool(x1)\n",
+    "\n",
+    "x2 = down2(x, v)\n",
+    "x = maxpool(x2)\n",
+    "\n",
+    "print(x.shape)\n",
+    "\n",
+    "deconv1 = DeConvBlock(128, 64, time_embed_dim)\n",
+    "\n",
+    "x = deconv1(x, v)\n",
+    "\n",
+    "print(x.shape)\n",
+    "\n",
+    "deconv2 = DeConvBlock(64, 32, time_embed_dim)\n",
+    "\n",
+    "x = deconv2(x, v)\n",
+    "\n",
+    "print(x.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c92c619b-2f2a-4cdf-b1f0-b59a398a3c26",
    "metadata": {},
    "outputs": [],
    "source": []
